--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <title>Internet Billboard</title>
 
+  <!-- Changes go here -->
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -59,7 +60,7 @@
       </div>
     </div>
   </header>
-  <!-- welcome to my webpage -->
+
   <!-- About Section -->
   <section id="about" class="about-section text-center">
     <div class="container">
