--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
     
       <div>
-        <label for="msg">Message:</label>
+        <label for="msg">Amount:</label>
         <textarea id="msg" name="user_message"></textarea>
       </div>
      
